--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
-/* top red bar moving text */
-.topbar{
-    
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
 }
+
+
+/* top red bar moving text */
+.topbar {
+  width: 100%;
+  height: 35px;
+  background-color: red;
+  margin: 0 0 0 0;
+}
+
