--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
   margin: 0 0 0 0;
   display: flex;
 }
+.city {
+  position: relative;
+  display: inline-block;
+}
 .citybtn {
   background-color: red;
   border: solid white 2.5px;
@@ -20,3 +24,19 @@ body {
   align-items: center;
   margin: 5px;
 }
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {background-color: #ddd;}
+.dropdown:hover .dropdown-content {display: block;}
