--- a/style.css
+++ b/style.css
@@ -4,5 +4,9 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
 }
-
-
+li {
+  display: block;
+  margin: 10px;
+  padding: 10px;
+  background-color: #ffffff;
+}
