--- a/style.css
+++ b/style.css
@@ -25,9 +25,21 @@ body {
 .navbar {
   height: 68px;
   width: 100%;
+  display: inline-flex;
+  justify-content: space-around;
 }
 .nav img {
   height: 10px;
   width: 10px;
   margin-right: 3px;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
 }
