--- a/styless.css
+++ b/styless.css
@@ -11,6 +11,8 @@ body {
   text-align: center;
   display: flex;
   justify-content: space-around;
+}
+.topbar {
   height: 36px;
 }
 .moving {
@@ -42,4 +44,45 @@ body {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
+}
+.image-slider {
+  height: 700px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider-inner {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slider-inner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slider-buttons {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider-buttons button {
+  background: transparent;
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+  opacity: 0.75;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.slider-buttons button:hover {
+  opacity: 1;
 }
