--- a/styless.css
+++ b/styless.css
@@ -76,7 +76,7 @@ body {
 .slider-buttons button {
   background: transparent;
   border: none;
-  color: #fff;
+  color: #ff0000;
   font-size: 24px;
   cursor: pointer;
   opacity: 0.75;
