--- a/styless.css
+++ b/styless.css
@@ -134,7 +134,7 @@ body {
 }
 
 .courses {
-  background-color: #fff;
+  background-color: #f5f5f5;
   border-radius: 12px;
   padding: 30px;
   max-width: 100%;
